# Freight-Doc-Matcher

./: .gitignore  README.md  pyproject.toml
docs/: data_model.md  efficiency_writeup.md  tableau_powerbi_spec.md
scripts/: benchmark_matching.py  build_training_set.py  generate_synthetic_docs.py  train_matcher.py
src/matcher/: cli.py  extract_text.py
src/matcher/analytics/: __init__.py  export.py  load.py  metrics.py  queries.py
src/matcher/linkage/: __init__.py  baselines.py  blocker.py  crossencoder.py  match.py  serialize.py  synth.py
tests/: test_analytics.py  test_baselines.py  test_blocker.py  test_brokers.py  test_classify.py  test_extract_fields.py  test_linkage_ml.py  test_matcher.py  test_serialize.py
