[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "freight-doc-matcher"
version = "0.2.0"
description = "Match Bills of Lading to Rate Confirmations and produce an organized Excel spreadsheet"
requires-python = ">=3.11"
dependencies = [
    "pdfplumber>=0.11",
    "pytesseract>=0.3.13",
    "pymupdf>=1.24",
    "anthropic>=0.40",
    "pydantic>=2.7",
    "rapidfuzz>=3.9",
    "openpyxl>=3.1",
    "click>=8.1",
    "python-dotenv>=1.0",
    "python-dateutil>=2.9",
    "rich>=13.7",
    "tenacity>=8.3",
    "Pillow>=10.3",
    "reportlab>=4.2",
]

[project.optional-dependencies]
# Fine-tuned entity-matching pipeline (bi-encoder blocking + cross-encoder).
# Install on Python 3.11-3.13 (PyTorch has no 3.14 wheels yet). For the RTX 5050
# (Blackwell / sm_120) install a CUDA build, e.g.:
#   pip install torch --index-url https://download.pytorch.org/whl/cu124
ml = [
    "torch>=2.4",
    "transformers>=4.44",
    "sentence-transformers>=3.0",
    "scikit-learn>=1.5",
    "datasets>=2.20",
    "accelerate>=1.1.0",
]
# SQL analytics layer + Tableau/Power BI exports.
bi = [
    "duckdb>=1.0",
    "pandas>=2.2",
    "pyarrow>=16.0",
    "matplotlib>=3.8",
]

[project.scripts]
matcher = "matcher.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/matcher"]

[tool.hatch.build.targets.editable]
packages = ["src/matcher"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["matcher"]
omit = ["*/tests/*"]
